# algoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/analysis/: checker.rs  mod.rs  monomorphize.rs  resolver.rs  scope.rs  types.rs  validator.rs
src/codegen/: c.rs  cpp.rs  dart.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  objc.rs  perl.rs  php.rs  python.rs  rust_gen.rs  swift.rs  verilog.rs  vhdl.rs
src/errors/: diagnostic.rs  mod.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
stdlib/: runtime.algoc
stdlib/compression/: deflate.algoc  gzip.algoc
stdlib/crypto/: aes.algoc  block_modes.algoc  chacha20.algoc  hmac.algoc  md5.algoc  sha256.algoc
stdlib/encoding/: base64.algoc
stdlib/hash/: adler32.algoc  crc32.algoc  hash.algoc  hkdf.algoc  pbkdf2.algoc  sha1.algoc  sha256.algoc  sha512.algoc
stdlib/image/: bmp.algoc  pixmap.algoc  png.algoc
